# MLLM_BARRETT

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_vllm_readme.md  setup.py
experiments/: run_evaluations_vllm.py  train_lm.py  train_mil_classifier.py  train_wsi_lm.py
scripts/: README.md  combine_h5_files.py  convert_xml_to_json.py  extract_images_from_tar.py  inspect_conch_titan_features.py  inspect_tar.py  inspect_tcga_titan_demo_data.py
scripts/slurm/: extract_patches_slide_embeddings_trident.job  run_full_eval_loop.job  run_llama_eval_loop.job  run_pathology_inference.job  tcga_structure_reports_with_qwen_235b.job
src/: multimodal_trainer.py  patient_inference.py  run_evaluations.sh  train.py  train_lm.py  train_wsi_lm.py
src/data/: __init__.py  collator.py  datasets.py
src/inference/: patient_inference.py
src/model/: __init__.py  patho_llama.py  text_llama.py
src/model_eval/: README.md  __init__.py  compute_tsne_barrett.py  conch_evaluation.py  evaluate_barrett_classification.py  evaluate_clinical_schemas.py  evaluate_judge_outputs.py  evaluate_model_fidelity.py  evaluate_tcga_classification.py  generate_reports_from_single_wsis.py  generate_reports_from_wsi.py  generate_val_reports.py  run_eval_pipeline.py
src/process_reports/: README.md  __init__.py  batch_inference_decoder.py  concatenate_processed_reports.py  evaluate_reports_with_llama_cpp.py  extract_tcga_labels_with_llm.py  llm_processor.py  prepare_prompts.py  process_reports_task.py  process_reports_with_LLM.py  process_reports_with_llama_cpp.py  (+2 more)
tokenizers/: README.md
(+103 files in other folders)
